--- a/quiz.html
+++ b/quiz.html
@@ -213,6 +213,64 @@
       margin-bottom: 20px;
     }
 
+    .phase1-form {
+      display: none;
+      animation: slideUp 0.5s ease;
+    }
+
+    .phase1-form.active {
+      display: block;
+    }
+
+    @keyframes slideUp {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .form-group {
+      margin-bottom: 20px;
+    }
+
+    .form-group label {
+      display: block;
+      margin-bottom: 8px;
+      color: #2c3e50;
+      font-weight: 600;
+      font-size: 14px;
+    }
+
+    .form-group input,
+    .form-group select {
+      width: 100%;
+      padding: 12px 14px;
+      border: 2px solid #e0e0e0;
+      border-radius: 8px;
+      font-size: 16px;
+      font-family: inherit;
+      transition: all 0.2s ease;
+    }
+
+    .form-group input:focus,
+    .form-group select:focus {
+      outline: none;
+      border-color: #1e3c72;
+      background: #f0f5ff;
+      box-shadow: 0 0 0 3px rgba(30, 60, 114, 0.1);
+    }
+
+    .form-disclaimer {
+      font-size: 12px;
+      color: #999;
+      margin-top: 15px;
+      text-align: center;
+    }
+
     .completion-message {
       font-size: 24px;
       color: #1e3c72;
@@ -277,6 +335,48 @@
       <div class="completion-icon">✅</div>
       <div class="completion-message">Análise Completa!</div>
       <div class="completion-subtext">Descobrindo sua solução personalizada...</div>
+    </div>
+
+    <div class="phase1-form" id="phase1Form">
+      <div class="header">
+        <h1>🎯 Aguarde um momento...</h1>
+        <p>Vamos descobrir exatamente qual é sua solução</p>
+      </div>
+
+      <form id="captureFormPhase1">
+        <div class="form-group">
+          <label for="nome">Seu nome</label>
+          <input type="text" id="nome" name="nome" placeholder="Ex: João Silva" required maxlength="100">
+        </div>
+
+        <div class="form-group">
+          <label for="whatsapp">Seu WhatsApp</label>
+          <input type="tel" id="whatsapp" name="whatsapp" placeholder="Ex: (11) 98765-4321" required>
+        </div>
+
+        <div class="form-group">
+          <label for="email">Seu e-mail</label>
+          <input type="email" id="email" name="email" placeholder="Ex: joao@email.com" required>
+        </div>
+
+        <div class="form-group">
+          <label for="idade">Sua faixa etária</label>
+          <select id="idade" name="idade" required>
+            <option value="">Selecione...</option>
+            <option value="35-40">35-40 anos</option>
+            <option value="41-50">41-50 anos</option>
+            <option value="51+">51+ anos</option>
+          </select>
+        </div>
+
+        <button type="submit" class="btn-finish" style="width: 100%;">
+          🚀 Ver meu resultado personalizado
+        </button>
+
+        <div class="form-disclaimer">
+          ✓ Seus dados são 100% privados • Receba seu protocolo em 2 minutos
+        </div>
+      </form>
     </div>
 
     <div class="buttons" id="buttons">
@@ -702,6 +802,47 @@
       window.location.href = redirectUrl;
     }
 
+    function capturePhase1() {
+      // Show form Phase 1 instead of immediate redirect (Story 2.0)
+      document.getElementById('quizContainer').innerHTML = '';
+      document.getElementById('completionScreen').classList.remove('active');
+      document.getElementById('phase1Form').classList.add('active');
+      document.getElementById('buttons').style.display = 'none';
+
+      // Setup form submission
+      setupPhase1FormListener();
+    }
+
+    function setupPhase1FormListener() {
+      const form = document.getElementById('captureFormPhase1');
+      form.addEventListener('submit', (e) => {
+        e.preventDefault();
+
+        const formData = {
+          nome: document.getElementById('nome').value,
+          whatsapp: document.getElementById('whatsapp').value,
+          email: document.getElementById('email').value,
+          idade: document.getElementById('idade').value,
+          timestamp: new Date().toISOString()
+        };
+
+        // Validate data
+        if (!formData.nome || !formData.whatsapp || !formData.email || !formData.idade) {
+          alert('Por favor, preencha todos os campos.');
+          return;
+        }
+
+        // Save Phase 1 data
+        localStorage.setItem('phase1Data', JSON.stringify(formData));
+
+        console.log('Phase 1 data captured:', formData);
+
+        // Route to LP with form data
+        const scores = JSON.parse(localStorage.getItem('quizScores'));
+        routeToLP(scores, formData);
+      });
+    }
+
     function finishQuiz() {
       // Calculate scores (Story 1.2)
       const scores = calculateScore();
@@ -724,7 +865,7 @@
         'síndrome': '🩺 Síndrome Metabólica'
       };
 
-      // Show completion screen
+      // Show completion screen briefly
       document.getElementById('quizContainer').innerHTML = '';
       document.getElementById('completionScreen').classList.add('active');
       document.getElementById('buttons').style.display = 'none';
@@ -740,17 +881,15 @@
 
         Seu Avatar: ${avatarLabels[avatar]}
 
-        Redirecionando para sua solução personalizada...
+        Agora precisamos de seus dados para continuar...
       `;
 
-      // Show results and redirect
       console.log('Scores finais:', scores);
       console.log('Avatar determinado:', avatar);
 
-      // Redirect after 2 seconds (Story 1.3)
+      // Show form Phase 1 after 1.5 seconds (Story 2.0)
       setTimeout(() => {
-        alert(scoresDisplay);
-        routeToLP(scores);
+        capturePhase1();
       }, 1500);
     }
 
