--- a/lp-emagrecimento.html
+++ b/lp-emagrecimento.html
@@ -3,70 +3,255 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reset Primal — Emagrecimento</title>
+  <title>Reset Primal — Por que sua barriga não sai (e o que fazer agora)</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #2c3e50; background: #f8f9fa; }
+    body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; line-height: 1.7; color: #1a1a2e; background: #f5f5f0; }
     .container { max-width: 720px; margin: 0 auto; padding: 20px; }
-    .hero { background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%); color: white; padding: 60px 20px 40px; text-align: center; border-radius: 0 0 20px 20px; margin-bottom: 40px; }
-    .hero h1 { font-size: 42px; font-weight: 800; line-height: 1.2; margin-bottom: 16px; }
-    .hero .subheadline { font-size: 20px; margin-bottom: 24px; opacity: 0.95; font-weight: 400; }
-    .cta-button { background: #e74c3c; color: white; border: none; padding: 20px 40px; font-size: 20px; font-weight: 700; border-radius: 8px; cursor: pointer; display: inline-block; text-decoration: none; transition: transform 0.2s; margin: 30px 0; box-shadow: 0 4px 15px rgba(231,76,60,0.3); }
-    .cta-button:hover { transform: translateY(-2px); }
-    .section { background: white; padding: 40px 30px; margin-bottom: 30px; border-radius: 12px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
-    .section h2 { font-size: 32px; margin-bottom: 20px; color: #1e3c72; }
-    .guarantee-box { background: #d4edda; border: 3px solid #28a745; padding: 35px; border-radius: 12px; margin: 40px 0; }
-    .guarantee-box h3 { color: #155724; margin-top: 0; font-size: 28px; }
-    .footer { text-align: center; padding: 40px 20px; color: #6c757d; font-size: 14px; }
-    .greeting { font-size: 24px; color: white; margin-bottom: 20px; }
-    @media (max-width: 600px) { .hero h1 { font-size: 32px; } .section { padding: 30px 20px; } }
+
+    /* HERO */
+    .hero { background: linear-gradient(150deg, #0f2027 0%, #1e3c72 60%, #2a5298 100%); color: white; padding: 70px 20px 50px; text-align: center; }
+    .hero .badge { display: inline-block; background: rgba(255,200,0,0.2); border: 1px solid rgba(255,200,0,0.5); color: #ffd700; font-size: 13px; font-weight: 700; letter-spacing: 1.5px; padding: 6px 16px; border-radius: 20px; margin-bottom: 24px; text-transform: uppercase; }
+    .hero h1 { font-size: 44px; font-weight: 900; line-height: 1.15; margin-bottom: 20px; letter-spacing: -0.5px; }
+    .hero h1 span { color: #ffd700; }
+    .hero .subheadline { font-size: 20px; margin-bottom: 10px; opacity: 0.9; max-width: 580px; margin-left: auto; margin-right: auto; }
+    .hero .proof-line { font-size: 14px; opacity: 0.7; margin-top: 16px; }
+    .greeting { font-size: 18px; color: #ffd700; margin-bottom: 16px; font-weight: 600; }
+
+    /* CTA */
+    .cta-button { background: linear-gradient(135deg, #e74c3c, #c0392b); color: white; border: none; padding: 22px 48px; font-size: 20px; font-weight: 800; border-radius: 8px; cursor: pointer; display: inline-block; text-decoration: none; margin: 28px 0 10px; box-shadow: 0 6px 25px rgba(231,76,60,0.45); letter-spacing: 0.3px; transition: transform 0.15s, box-shadow 0.15s; }
+    .cta-button:hover { transform: translateY(-3px); box-shadow: 0 10px 30px rgba(231,76,60,0.55); }
+    .cta-button.full { width: 100%; text-align: center; }
+    .cta-sub { font-size: 13px; opacity: 0.65; margin-top: 6px; }
+
+    /* SECTIONS */
+    .section { background: white; padding: 44px 36px; margin: 24px 0; border-radius: 12px; box-shadow: 0 2px 12px rgba(0,0,0,0.06); }
+    .section h2 { font-size: 30px; font-weight: 800; margin-bottom: 18px; color: #0f2027; line-height: 1.25; }
+    .section p { font-size: 17px; color: #333; margin-bottom: 14px; }
+    .section p:last-child { margin-bottom: 0; }
+
+    /* PAIN */
+    .pain { border-left: 4px solid #e74c3c; }
+    .pain h2 { color: #c0392b; }
+
+    /* MECHANISM */
+    .mechanism-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 16px; margin-top: 24px; }
+    .mechanism-item { background: #f8f9ff; border: 1px solid #e0e8ff; border-radius: 10px; padding: 20px 18px; }
+    .mechanism-item .icon { font-size: 28px; margin-bottom: 8px; }
+    .mechanism-item h4 { font-size: 15px; font-weight: 700; color: #1e3c72; margin-bottom: 6px; }
+    .mechanism-item p { font-size: 14px; color: #555; margin: 0; }
+
+    /* PROOF */
+    .proof-block { background: #f0f7ff; border: 1px solid #cce0ff; border-radius: 10px; padding: 24px; margin: 20px 0; }
+    .proof-block .founder-tag { font-size: 12px; font-weight: 700; color: #1e3c72; letter-spacing: 1px; text-transform: uppercase; margin-bottom: 10px; }
+    .proof-block p { font-size: 16px; color: #1a1a2e; margin: 0; line-height: 1.6; }
+
+    /* VALUE STACK */
+    .value-stack { border-left: 4px solid #27ae60; }
+    .value-item { display: flex; justify-content: space-between; align-items: flex-start; padding: 14px 0; border-bottom: 1px solid #f0f0f0; }
+    .value-item:last-child { border-bottom: none; }
+    .value-item .desc { flex: 1; }
+    .value-item .desc strong { font-size: 16px; color: #0f2027; display: block; margin-bottom: 3px; }
+    .value-item .desc span { font-size: 14px; color: #666; }
+    .value-item .price { font-size: 15px; font-weight: 700; color: #27ae60; white-space: nowrap; margin-left: 20px; }
+    .value-total { display: flex; justify-content: space-between; padding-top: 16px; margin-top: 8px; border-top: 2px solid #27ae60; }
+    .value-total .label { font-size: 17px; font-weight: 700; color: #0f2027; }
+    .value-total .amount { font-size: 17px; font-weight: 700; color: #27ae60; }
+    .value-final { text-align: center; margin-top: 20px; }
+    .value-final .you-pay { font-size: 14px; color: #666; margin-bottom: 4px; }
+    .value-final .price-big { font-size: 52px; font-weight: 900; color: #e74c3c; line-height: 1; }
+    .value-final .price-small { font-size: 22px; font-weight: 400; vertical-align: top; margin-top: 10px; display: inline-block; }
+
+    /* GUARANTEE */
+    .guarantee-box { background: #f0fff4; border: 3px solid #27ae60; padding: 36px; border-radius: 14px; margin: 32px 0; text-align: center; }
+    .guarantee-box .guarantee-icon { font-size: 52px; margin-bottom: 12px; }
+    .guarantee-box h3 { color: #155724; font-size: 26px; font-weight: 800; margin-bottom: 14px; }
+    .guarantee-box p { font-size: 17px; color: #1a3320; max-width: 520px; margin: 0 auto; }
+
+    /* FAQ */
+    .faq-item { padding: 18px 0; border-bottom: 1px solid #eee; }
+    .faq-item:last-child { border-bottom: none; }
+    .faq-item .q { font-size: 17px; font-weight: 700; color: #0f2027; margin-bottom: 8px; }
+    .faq-item .a { font-size: 16px; color: #444; }
+
+    /* URGENCY */
+    .urgency { background: #fff8e1; border: 2px solid #ffc107; border-radius: 10px; padding: 20px 24px; margin: 24px 0; text-align: center; }
+    .urgency p { font-size: 16px; color: #7d5200; font-weight: 600; margin: 0; }
+
+    /* FOOTER */
+    .footer { text-align: center; padding: 40px 20px; color: #888; font-size: 13px; }
+    .footer a { color: #888; }
+
+    @media (max-width: 600px) {
+      .hero h1 { font-size: 32px; }
+      .section { padding: 30px 22px; }
+      .mechanism-grid { grid-template-columns: 1fr; }
+      .cta-button { padding: 20px 32px; font-size: 18px; }
+    }
   </style>
 </head>
 <body>
+
+  <!-- HERO -->
   <div class="hero">
     <div class="container">
-      <div class="greeting" id="greeting">Olá visitante!</div>
-      <h1>Acorde Com Energia em 7 Dias</h1>
-      <p class="subheadline">Perder peso teimoso sem dieta impossível.</p>
-      <p style="font-size: 16px; opacity: 0.9;">O protocolo exato para eliminar aquela barriga, recuperar confiança e se reconhecer no espelho.</p>
-      <button class="cta-button">🚀 Liberar meu acesso</button>
+      <div class="greeting" id="greeting">Olá!</div>
+      <div class="badge">Protocolo de 7 dias — Guia Digital</div>
+      <h1>Por que sua barriga<br><span>teimosa não sai</span><br>— e o que fazer agora</h1>
+      <p class="subheadline">O protocolo que une jejum intermitente, alimentação low-carb e exercícios metabólicos para destravar seu corpo em 7 dias.</p>
+      <a href="#comprar" class="cta-button">Quero o protocolo — R$ 97</a>
+      <p class="cta-sub">Acesso imediato · Garantia de 7 dias</p>
+      <p class="proof-line">Protocolo desenvolvido e testado pelo founder — resultados documentados.</p>
     </div>
   </div>
+
   <div class="container">
+
+    <!-- DOR -->
+    <div class="section pain">
+      <h2>Você não falhou. O método falhou.</h2>
+      <p>Você tentou dieta. Tentou academia. Tentou controlar a alimentação. A balança baixou um pouco, depois voltou. Aquela barriga continua lá, teimosa, como se ignorasse tudo que você faz.</p>
+      <p>A verdade é brutal: a maioria das dietas populares ataca o sintoma, não a causa. Cortar calorias sem entender como seu metabolismo funciona é como tentar apagar fogo jogando água na fumaça.</p>
+      <p>Não é falta de força de vontade. É falta de método correto.</p>
+    </div>
+
+    <!-- MECANISMO -->
     <div class="section">
-      <h2>Você já tentou tudo</h2>
-      <p>Dietas malucas, exercícios intensos, pílulas milagrosas... Nada funciona. Aquele peso teimoso na barriga continua lá, você não cabe nas roupas que gostava, e se evita espelhos.</p>
-      <p>A verdade? O problema não é falta de força de vontade. É falta de entender como seu corpo funciona de verdade.</p>
+      <h2>O problema real: seu corpo parou de queimar gordura</h2>
+      <p>Depois de anos de dietas restritivas e alimentação irregular, o corpo entra em modo de economia. Insulina elevada bloqueia a queima de gordura. O metabolismo desacelera. O peso teimoso se instala.</p>
+      <p>O Reset Primal ataca os três pontos que as dietas comuns ignoram:</p>
+      <div class="mechanism-grid">
+        <div class="mechanism-item">
+          <div class="icon">⏱️</div>
+          <h4>Janela Alimentar Estratégica</h4>
+          <p>Jejum intermitente calibrado para forçar seu corpo a usar gordura como combustível, sem passar fome.</p>
+        </div>
+        <div class="mechanism-item">
+          <div class="icon">🥩</div>
+          <h4>Alimentação Low-Carb Inteligente</h4>
+          <p>Redução de carboidratos que mantém saciedade, normaliza insulina e destrava a queima de gordura abdominal.</p>
+        </div>
+        <div class="mechanism-item">
+          <div class="icon">🔥</div>
+          <h4>Exercícios Metabólicos</h4>
+          <p>Movimentos curtos e específicos que elevam o metabolismo por horas depois do treino — sem passar horas na academia.</p>
+        </div>
+        <div class="mechanism-item">
+          <div class="icon">⚖️</div>
+          <h4>Equilíbrio Hormonal</h4>
+          <p>Protocolo que regula cortisol, insulina e hormônios do apetite — os verdadeiros responsáveis pela barriga teimosa.</p>
+        </div>
+      </div>
     </div>
+
+    <!-- PROVA DO FOUNDER -->
+    <div class="section">
+      <h2>Resultados reais antes de qualquer promessa</h2>
+      <p>Eu não vendo teoria. Eu testei esse protocolo no meu próprio corpo antes de documentar cada passo.</p>
+      <div class="proof-block">
+        <div class="founder-tag">Relato do Founder — Resultado documentado</div>
+        <p>"Depois de anos tentando dietas que funcionavam por 2 semanas e paravam, apliquei exatamente esses 4 pilares combinados. Em 7 dias: energia de manhã sem café, calça que não fechava passando no botão, clareza mental voltando. Em 30 dias: 8kg a menos, exames normalizados, dormindo profundo pela primeira vez em anos."</p>
+      </div>
+      <p>Não é milagre. É bioquímica. Quando você para de lutar contra seu metabolismo e começa a trabalhar com ele, o corpo responde rápido.</p>
+    </div>
+
+    <!-- OFERTA / VALUE STACK -->
+    <div class="section value-stack" id="comprar">
+      <h2>O que você recebe hoje</h2>
+      <div class="value-item">
+        <div class="desc">
+          <strong>Guia Reset Primal — Protocolo Completo de 7 Dias</strong>
+          <span>Passo a passo diário: o que comer, quando comer, quais exercícios fazer e em qual sequência. Sem dúvidas.</span>
+        </div>
+        <div class="price">R$ 147</div>
+      </div>
+      <div class="value-item">
+        <div class="desc">
+          <strong>Bônus: Cardápio Low-Carb de 7 Dias</strong>
+          <span>Lista de compras pronta + receitas simples para os 7 dias. Sem precisar cozinhar pratos elaborados.</span>
+        </div>
+        <div class="price">R$ 47</div>
+      </div>
+      <div class="value-item">
+        <div class="desc">
+          <strong>Bônus: Guia de Jejum Intermitente para Iniciantes</strong>
+          <span>Como começar sem efeitos colaterais, os erros comuns e como calibrar seu horário de janela.</span>
+        </div>
+        <div class="price">R$ 37</div>
+      </div>
+      <div class="value-item">
+        <div class="desc">
+          <strong>Bônus: Os 5 Exercícios Metabólicos do Protocolo</strong>
+          <span>Vídeo-guia com os movimentos exatos — menos de 20 minutos por dia, sem equipamento.</span>
+        </div>
+        <div class="price">R$ 67</div>
+      </div>
+      <div class="value-total">
+        <span class="label">Valor total</span>
+        <span class="amount">R$ 298</span>
+      </div>
+      <div class="value-final">
+        <div class="you-pay">Você paga apenas</div>
+        <div class="price-big"><span class="price-small">R$&nbsp;</span>97</div>
+      </div>
+      <a href="https://pay.hotmart.com/W103146395W?bid=1772027350275" class="cta-button full">Quero o protocolo agora — R$ 97</a>
+      <p class="cta-sub">Acesso imediato após o pagamento · Funciona em celular e computador</p>
+    </div>
+
+    <!-- GARANTIA -->
     <div class="guarantee-box">
-      <h3>✓ Garantia de Bem-Estar de 7 Dias</h3>
-      <p style="font-size: 18px; margin: 20px 0;">Invista R$ 97. Siga o protocolo por 7 dias completos.</p>
-      <p style="font-size: 19px; font-weight: 600; color: #155724;">Se não notar diferença real, se não começar a perder peso — dinheiro de volta total.</p>
+      <div class="guarantee-icon">🛡️</div>
+      <h3>Garantia de 7 Dias — Risco Zero</h3>
+      <p>Siga o protocolo por 7 dias completos. Se você não sentir diferença real na sua energia, disposição e bem-estar — me manda uma mensagem e devolvo cada centavo. Sem perguntas. Sem burocracia. Sem prazo.</p>
     </div>
-    <button class="cta-button" style="width: 100%;">🚀 Começar Agora</button>
+
+    <!-- URGÊNCIA REAL -->
+    <div class="urgency">
+      <p>Este guia está disponível por R$ 97 durante o período de lançamento. O preço regular será R$ 147.</p>
+    </div>
+
+    <!-- FAQ -->
+    <div class="section">
+      <h2>Perguntas frequentes</h2>
+      <div class="faq-item">
+        <div class="q">Preciso fazer dieta radical ou cortar tudo que gosto?</div>
+        <div class="a">Não. O protocolo reduz carboidratos de forma gradual e inteligente, sem cortar grupos alimentares de uma vez. A maioria das pessoas acha mais fácil do que esperava.</div>
+      </div>
+      <div class="faq-item">
+        <div class="q">Consigo seguir trabalhando e cuidando da família ao mesmo tempo?</div>
+        <div class="a">O protocolo foi desenhado para pessoas com vida ocupada. Os exercícios levam menos de 20 minutos. As refeições são simples. O jejum se adapta à sua rotina.</div>
+      </div>
+      <div class="faq-item">
+        <div class="q">Em quanto tempo recebo o guia?</div>
+        <div class="a">Acesso imediato. Assim que o pagamento for confirmado, você recebe o link por e-mail. Em menos de 2 minutos já está lendo.</div>
+      </div>
+      <div class="faq-item">
+        <div class="q">Funciona para quem já tentou de tudo?</div>
+        <div class="a">A maioria dos nossos leitores já tentou outras dietas sem resultado. O diferencial é a combinação dos 4 pilares ao mesmo tempo — cada um sozinho dá resultado limitado. Unidos, destravamos o metabolismo.</div>
+      </div>
+    </div>
+
+    <!-- CTA FINAL -->
+    <div style="text-align: center; padding: 20px 0 40px;">
+      <a href="https://pay.hotmart.com/W103146395W?bid=1772027350275" class="cta-button">Quero o protocolo — R$ 97</a>
+      <p class="cta-sub">Garantia de 7 dias · Acesso imediato · Sem risco</p>
+    </div>
+
   </div>
+
   <div class="footer">
     <p>© 2026 Reset Primal. Todos os direitos reservados.</p>
-    <p style="margin-top: 20px; font-size: 13px;">Este site não oferece conselhos médicos.</p>
+    <p style="margin-top: 12px;">Este guia não substitui acompanhamento médico. Consulte seu médico antes de iniciar qualquer protocolo alimentar.</p>
   </div>
 
   <script>
-    // Parse URL params (Story 2.0, 2.1)
     const params = new URLSearchParams(window.location.search);
-    const nome = params.get('nome') || 'visitante';
-
-    // Display personalized greeting
-    document.getElementById('greeting').textContent = `Olá, ${nome}!`;
-
-    console.log('LP Peso carregada com dados:', {
-      avatar: params.get('avatar'),
-      nome: nome,
-      scores: {
-        m: params.get('m'),
-        p: params.get('p'),
-        s: params.get('s')
-      }
-    });
+    const nome = params.get('nome');
+    if (nome) {
+      document.getElementById('greeting').textContent = `Olá, ${nome}!`;
+    } else {
+      document.getElementById('greeting').style.display = 'none';
+    }
   </script>
 </body>
 </html>
